css/styles.css
* {
    box-sizing: border-box;
}

/*____ ****Main Layout**** ____ */

body {
  font-family: 'Muli', sans-serif;
  margin: 0 auto;
  background: rgb(227, 239, 250); 
}

main {
    max-width: 768px;
    margin: 0 auto;
}

.main-header {
    text-align: center;
    background: #274258;
    color: white;
    padding: 15px 0 15px;
}

h1,
legend {
  font-family: 'Merriweather', serif;
}

.intro {
    text-align: center;
    padding: 16px 0 0;   
}

.intro p {
    padding-bottom: 20px;
    color: #7f8081;
}

p {
    margin: 0 auto;
}

.thick {
    margin-bottom: -5px;
    width: 95%;
    border: 2.5px solid #274258;
}

.thin {
    width: 95%;
    border: 1px solid #274258;
}

form {
    background: #EFF4F9;
}

/* ____ ****Form First Field**** ____ */


.flex-set {
    display: flex;
    flex-direction: column;
    margin-bottom: 12px;
}

input:hover,
select:hover,
textarea:hover {
    background-color: rgb(249, 255, 255);
}

input:focus,
.stateselect:focus,
textarea:focus {
    background-color: rgb(227, 255, 255);
    border: 1px solid rgb(11, 21, 110);
    border-radius: 5px;
    transition: background-color 3s;
}

legend {
     font-weight: 700;
     font-size: 20px;
     padding: 30px 0 20px;
}

fieldset {
    border: none;
}

input,
textarea,
#state {
    padding: 12px;
    margin: 5px 0 5px;
    background: white;
    border: none;
    box-shadow: inset 5px 5px 10px rgba(0,7,36,.2);
    border-radius: 5px;  
}

input::placeholder {
    text-align: right;
    font-style: italic;
    font-size: 15px;
    opacity: .5;
}

#zip {
  max-width: 50%;
}

/* ____ ****Form Second Field**** ____ */

.secondary-form {
    padding-bottom: 30px;
}

.newsletter {
    width: 100%;
    border-top: 2px solid #274258; 
}

.container {
    padding: 7px 0 7px 0;
}

input[type="checkbox"],
input[type="radio"] {
    margin-right: 10px;
    margin-bottom: 15px;
}

textarea {
    margin-top: 10px;
    padding-bottom: 40px;
    width: 100%;
}

.boxes {
    box-shadow: none;
}

.button {
    margin: 0 15px;
}

button {
    width: 100%;
    padding: 20px;
    margin-top: 10px;
    border: none;
    border-radius: 5px;
    font-size: 23px;
    background: #1CB1A7;
    color: white;
    box-shadow: 5px 5px 8px rgba(0,7,36,.4);
    cursor: pointer;
}

/* ____ ****Footer**** ____ */

footer {
    text-align: center;
    margin: 30px 0 100px;
    font-style: italic;
    color: #7f8081;
    
}

/* ____ ****Media Query @ 768px**** ____ */

@media (min-width: 768px) {

    .flex-set {      
        flex-direction: row;
        align-items: baseline;    
    }

    input[type="text"],
    input[type="email"],
    input[type="tel"],
    select {
        align-items: flex-start;
        width: 80%;
    } 
    
    label[for="name"],
    label[for="emailadd"],
    label[for="phone"],
    label[for="street"],
    label[for="city"],
    label[for="state"],
    label[for="zip"] {
        width: 20%;
    }
    

    #zip {
        align-items: flex-start;
        max-width: 25%;
    }
}

